kubernetes/platform/production/argocd/resources/patch-service.yml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
